parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> expr
Rule 2     statement -> ID ASSIGN expr
Rule 3     expr -> ID
Rule 4     expr -> factor
Rule 5     expr -> expr AND expr  [precedence=left, level=1]
Rule 6     expr -> expr OR expr  [precedence=left, level=1]
Rule 7     expr -> PASS
Rule 8     expr -> CLASS ID COLON
Rule 9     expr -> CLASS ID factor COLON
Rule 10    expr -> DEF ID factor COLON
Rule 11    expr -> WHILE TRUE COLON
Rule 12    expr -> WHILE ID COLON
Rule 13    expr -> FOR ID IN ID COLON
Rule 14    expr -> IF ID COLON
Rule 15    expr -> IF expr COLON
Rule 16    expr -> IF ID IN ID COLON expr
Rule 17    expr -> COLON
Rule 18    expr -> expr MAIOREQUALS expr  [precedence=left, level=2]
Rule 19    expr -> expr MENOREQUALS expr  [precedence=left, level=2]
Rule 20    expr -> expr MAIOR expr  [precedence=left, level=2]
Rule 21    expr -> expr MENOR expr  [precedence=left, level=2]
Rule 22    expr -> expr DIVIDE expr  [precedence=left, level=4]
Rule 23    expr -> expr TIMES expr  [precedence=left, level=4]
Rule 24    expr -> expr MINUS expr  [precedence=left, level=3]
Rule 25    expr -> expr PLUS expr  [precedence=left, level=3]
Rule 26    expr -> NUMBER
Rule 27    sumequals -> ID SUMEQUALS expr
Rule 28    minusequals -> ID MINUSEQUALS expr
Rule 29    factor -> LPAREN expr RPAREN

Unused terminals:

    CONTINUE
    ELIF
    RCOLC
    NORMALSTRING
    EOF
    DIVIDEEQUALS
    NOT
    LBRACE
    ELSE
    WHITESPACE
    LCOLC
    IMPORT
    BREAK
    EQUALS
    FALSE
    NONE
    RBRACE
    NAME
    FROM
    DIFF
    TIMESEQUALS
    RETURN

Terminals, with rules where they appear:

AND                  : 5
ASSIGN               : 2
BREAK                : 
CLASS                : 8 9
COLON                : 8 9 10 11 12 13 14 15 16 17
CONTINUE             : 
DEF                  : 10
DIFF                 : 
DIVIDE               : 22
DIVIDEEQUALS         : 
ELIF                 : 
ELSE                 : 
EOF                  : 
EQUALS               : 
FALSE                : 
FOR                  : 13
FROM                 : 
ID                   : 2 3 8 9 10 12 13 13 14 16 16 27 28
IF                   : 14 15 16
IMPORT               : 
IN                   : 13 16
LBRACE               : 
LCOLC                : 
LPAREN               : 29
MAIOR                : 20
MAIOREQUALS          : 18
MENOR                : 21
MENOREQUALS          : 19
MINUS                : 24
MINUSEQUALS          : 28
NAME                 : 
NONE                 : 
NORMALSTRING         : 
NOT                  : 
NUMBER               : 26
OR                   : 6
PASS                 : 7
PLUS                 : 25
RBRACE               : 
RCOLC                : 
RETURN               : 
RPAREN               : 29
SUMEQUALS            : 27
TIMES                : 23
TIMESEQUALS          : 
TRUE                 : 11
WHILE                : 11 12
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear:

expr                 : 1 2 5 5 6 6 15 16 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 27 28 29
factor               : 4 9 10
minusequals          : 
statement            : 0
sumequals            : 


state 0

    (0) S' -> . statement
    (1) statement -> . expr
    (2) statement -> . ID ASSIGN expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 3
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    statement                      shift and go to state 1
    expr                           shift and go to state 2
    factor                         shift and go to state 4

state 1

    (0) S' -> statement .


state 2

    (1) statement -> expr .
    (5) expr -> expr . AND expr
    (6) expr -> expr . OR expr
    (18) expr -> expr . MAIOREQUALS expr
    (19) expr -> expr . MENOREQUALS expr
    (20) expr -> expr . MAIOR expr
    (21) expr -> expr . MENOR expr
    (22) expr -> expr . DIVIDE expr
    (23) expr -> expr . TIMES expr
    (24) expr -> expr . MINUS expr
    (25) expr -> expr . PLUS expr
    $end            reduce using rule 1 (statement -> expr .)
    AND             shift and go to state 14
    OR              shift and go to state 15
    MAIOREQUALS     shift and go to state 16
    MENOREQUALS     shift and go to state 17
    MAIOR           shift and go to state 18
    MENOR           shift and go to state 19
    DIVIDE          shift and go to state 20
    TIMES           shift and go to state 21
    MINUS           shift and go to state 22
    PLUS            shift and go to state 23


state 3

    (2) statement -> ID . ASSIGN expr
    (3) expr -> ID .
    ASSIGN          shift and go to state 24
    AND             reduce using rule 3 (expr -> ID .)
    OR              reduce using rule 3 (expr -> ID .)
    MAIOREQUALS     reduce using rule 3 (expr -> ID .)
    MENOREQUALS     reduce using rule 3 (expr -> ID .)
    MAIOR           reduce using rule 3 (expr -> ID .)
    MENOR           reduce using rule 3 (expr -> ID .)
    DIVIDE          reduce using rule 3 (expr -> ID .)
    TIMES           reduce using rule 3 (expr -> ID .)
    MINUS           reduce using rule 3 (expr -> ID .)
    PLUS            reduce using rule 3 (expr -> ID .)
    $end            reduce using rule 3 (expr -> ID .)


state 4

    (4) expr -> factor .
    AND             reduce using rule 4 (expr -> factor .)
    OR              reduce using rule 4 (expr -> factor .)
    MAIOREQUALS     reduce using rule 4 (expr -> factor .)
    MENOREQUALS     reduce using rule 4 (expr -> factor .)
    MAIOR           reduce using rule 4 (expr -> factor .)
    MENOR           reduce using rule 4 (expr -> factor .)
    DIVIDE          reduce using rule 4 (expr -> factor .)
    TIMES           reduce using rule 4 (expr -> factor .)
    MINUS           reduce using rule 4 (expr -> factor .)
    PLUS            reduce using rule 4 (expr -> factor .)
    $end            reduce using rule 4 (expr -> factor .)
    COLON           reduce using rule 4 (expr -> factor .)
    RPAREN          reduce using rule 4 (expr -> factor .)


state 5

    (7) expr -> PASS .
    AND             reduce using rule 7 (expr -> PASS .)
    OR              reduce using rule 7 (expr -> PASS .)
    MAIOREQUALS     reduce using rule 7 (expr -> PASS .)
    MENOREQUALS     reduce using rule 7 (expr -> PASS .)
    MAIOR           reduce using rule 7 (expr -> PASS .)
    MENOR           reduce using rule 7 (expr -> PASS .)
    DIVIDE          reduce using rule 7 (expr -> PASS .)
    TIMES           reduce using rule 7 (expr -> PASS .)
    MINUS           reduce using rule 7 (expr -> PASS .)
    PLUS            reduce using rule 7 (expr -> PASS .)
    $end            reduce using rule 7 (expr -> PASS .)
    COLON           reduce using rule 7 (expr -> PASS .)
    RPAREN          reduce using rule 7 (expr -> PASS .)


state 6

    (8) expr -> CLASS . ID COLON
    (9) expr -> CLASS . ID factor COLON
    ID              shift and go to state 25


state 7

    (17) expr -> COLON .
    AND             reduce using rule 17 (expr -> COLON .)
    OR              reduce using rule 17 (expr -> COLON .)
    MAIOREQUALS     reduce using rule 17 (expr -> COLON .)
    MENOREQUALS     reduce using rule 17 (expr -> COLON .)
    MAIOR           reduce using rule 17 (expr -> COLON .)
    MENOR           reduce using rule 17 (expr -> COLON .)
    DIVIDE          reduce using rule 17 (expr -> COLON .)
    TIMES           reduce using rule 17 (expr -> COLON .)
    MINUS           reduce using rule 17 (expr -> COLON .)
    PLUS            reduce using rule 17 (expr -> COLON .)
    $end            reduce using rule 17 (expr -> COLON .)
    COLON           reduce using rule 17 (expr -> COLON .)
    RPAREN          reduce using rule 17 (expr -> COLON .)


state 8

    (10) expr -> DEF . ID factor COLON
    ID              shift and go to state 26


state 9

    (11) expr -> WHILE . TRUE COLON
    (12) expr -> WHILE . ID COLON
    TRUE            shift and go to state 27
    ID              shift and go to state 28


state 10

    (13) expr -> FOR . ID IN ID COLON
    ID              shift and go to state 29


state 11

    (14) expr -> IF . ID COLON
    (15) expr -> IF . expr COLON
    (16) expr -> IF . ID IN ID COLON expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 30
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 31
    factor                         shift and go to state 4

state 12

    (26) expr -> NUMBER .
    AND             reduce using rule 26 (expr -> NUMBER .)
    OR              reduce using rule 26 (expr -> NUMBER .)
    MAIOREQUALS     reduce using rule 26 (expr -> NUMBER .)
    MENOREQUALS     reduce using rule 26 (expr -> NUMBER .)
    MAIOR           reduce using rule 26 (expr -> NUMBER .)
    MENOR           reduce using rule 26 (expr -> NUMBER .)
    DIVIDE          reduce using rule 26 (expr -> NUMBER .)
    TIMES           reduce using rule 26 (expr -> NUMBER .)
    MINUS           reduce using rule 26 (expr -> NUMBER .)
    PLUS            reduce using rule 26 (expr -> NUMBER .)
    $end            reduce using rule 26 (expr -> NUMBER .)
    COLON           reduce using rule 26 (expr -> NUMBER .)
    RPAREN          reduce using rule 26 (expr -> NUMBER .)


state 13

    (29) factor -> LPAREN . expr RPAREN
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 32
    factor                         shift and go to state 4

state 14

    (5) expr -> expr AND . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 34
    factor                         shift and go to state 4

state 15

    (6) expr -> expr OR . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 35
    factor                         shift and go to state 4

state 16

    (18) expr -> expr MAIOREQUALS . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 36
    factor                         shift and go to state 4

state 17

    (19) expr -> expr MENOREQUALS . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 37
    factor                         shift and go to state 4

state 18

    (20) expr -> expr MAIOR . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 38
    factor                         shift and go to state 4

state 19

    (21) expr -> expr MENOR . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 39
    factor                         shift and go to state 4

state 20

    (22) expr -> expr DIVIDE . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 40
    factor                         shift and go to state 4

state 21

    (23) expr -> expr TIMES . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 41
    factor                         shift and go to state 4

state 22

    (24) expr -> expr MINUS . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 42
    factor                         shift and go to state 4

state 23

    (25) expr -> expr PLUS . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 43
    factor                         shift and go to state 4

state 24

    (2) statement -> ID ASSIGN . expr
    (3) expr -> . ID
    (4) expr -> . factor
    (5) expr -> . expr AND expr
    (6) expr -> . expr OR expr
    (7) expr -> . PASS
    (8) expr -> . CLASS ID COLON
    (9) expr -> . CLASS ID factor COLON
    (10) expr -> . DEF ID factor COLON
    (11) expr -> . WHILE TRUE COLON
    (12) expr -> . WHILE ID COLON
    (13) expr -> . FOR ID IN ID COLON
    (14) expr -> . IF ID COLON
    (15) expr -> . IF expr COLON
    (16) expr -> . IF ID IN ID COLON expr
    (17) expr -> . COLON
    (18) expr -> . expr MAIOREQUALS expr
    (19) expr -> . expr MENOREQUALS expr
    (20) expr -> . expr MAIOR expr
    (21) expr -> . expr MENOR expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr TIMES expr
    (24) expr -> . expr MINUS expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . NUMBER
    (29) factor -> . LPAREN expr RPAREN
    ID              shift and go to state 33
    PASS            shift and go to state 5
    CLASS           shift and go to state 6
    DEF             shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    IF              shift and go to state 11
    COLON           shift and go to state 7
    NUMBER          shift and go to state 12
    LPAREN          shift and go to state 13

    expr                           shift and go to state 44
    factor                         shift and go to state 4

state 25

    (8) expr -> CLASS ID . COLON
    (9) expr -> CLASS ID . factor COLON
    (29) factor -> . LPAREN expr RPAREN
    COLON           shift and go to state 45
    LPAREN          shift and go to state 13

    factor                         shift and go to state 46

state 26

    (10) expr -> DEF ID . factor COLON
    (29) factor -> . LPAREN expr RPAREN
    LPAREN          shift and go to state 13

    factor                         shift and go to state 47

state 27

    (11) expr -> WHILE TRUE . COLON
    COLON           shift and go to state 48


state 28

    (12) expr -> WHILE ID . COLON
    COLON           shift and go to state 49


state 29

    (13) expr -> FOR ID . IN ID COLON
    IN              shift and go to state 50


state 30

    (14) expr -> IF ID . COLON
    (16) expr -> IF ID . IN ID COLON expr
    (3) expr -> ID .
  ! shift/reduce conflict for COLON resolved as shift
    COLON           shift and go to state 51
    IN              shift and go to state 52
    AND             reduce using rule 3 (expr -> ID .)
    OR              reduce using rule 3 (expr -> ID .)
    MAIOREQUALS     reduce using rule 3 (expr -> ID .)
    MENOREQUALS     reduce using rule 3 (expr -> ID .)
    MAIOR           reduce using rule 3 (expr -> ID .)
    MENOR           reduce using rule 3 (expr -> ID .)
    DIVIDE          reduce using rule 3 (expr -> ID .)
    TIMES           reduce using rule 3 (expr -> ID .)
    MINUS           reduce using rule 3 (expr -> ID .)
    PLUS            reduce using rule 3 (expr -> ID .)


state 31

    (15) expr -> IF expr . COLON
    (5) expr -> expr . AND expr
    (6) expr -> expr . OR expr
    (18) expr -> expr . MAIOREQUALS expr
    (19) expr -> expr . MENOREQUALS expr
    (20) expr -> expr . MAIOR expr
    (21) expr -> expr . MENOR expr
    (22) expr -> expr . DIVIDE expr
    (23) expr -> expr . TIMES expr
    (24) expr -> expr . MINUS expr
    (25) expr -> expr . PLUS expr
    COLON           shift and go to state 53
    AND             shift and go to state 14
    OR              shift and go to state 15
    MAIOREQUALS     shift and go to state 16
    MENOREQUALS     shift and go to state 17
    MAIOR           shift and go to state 18
    MENOR           shift and go to state 19
    DIVIDE          shift and go to state 20
    TIMES           shift and go to state 21
    MINUS           shift and go to state 22
    PLUS            shift and go to state 23


state 32

    (29) factor -> LPAREN expr . RPAREN
    (5) expr -> expr . AND expr
    (6) expr -> expr . OR expr
    (18) expr -> expr . MAIOREQUALS expr
    (19) expr -> expr . MENOREQUALS expr
    (20) expr -> expr . MAIOR expr
    (21) expr -> expr . MENOR expr
    (22) expr -> expr . DIVIDE expr
    (23) expr -> expr . TIMES expr
    (24) expr -> expr . MINUS expr
    (25) expr -> expr . PLUS expr
    RPAREN          shift and go to state 54
    AND             shift and go to state 14
    OR              shift and go to state 15
    MAIOREQUALS     shift and go to state 16
    MENOREQUALS     shift and go to state 17
    MAIOR           shift and go to state 18
    MENOR           shift and go to state 19
    DIVIDE          shift and go to state 20
    TIMES           shift and go to state 21
    MINUS           shift and go to state 22
    PLUS            shift and go to state 23

